<resources>
    <string name="autor_nome" translatable="false">Cesar Soares de Oliveira</string>
    <string name="autor_curso">Java Technologies Post-Graduation</string>
    <string name="autor_email" translatable="false">cesarsoares.ti@gmail.com</string>
    <string name="app_descricao">This system is a sales tracking tool for a self-employed pastry chef</string>
    <string name="instituicao">UTFPR</string>
    <string name="app_name">Sales Control</string>
    <string name="hint_descricao">Product Description</string>
    <string name="hint_quantidade">Quantity</string>
    <string name="hint_valor">Price ($)</string>
    <string name="label_status">Status:</string>
    <string name="ativo">Active</string>
    <string name="inativo">Inactive</string>
    <string name="disponivel">Ready for delivery</string>
    <string name="unidade_medida">Unit of Measurement</string>

    <!-- Titles -->
    <string name="title_sobre_autor">About the Developer</string>
    <string name="title_lista_produto">Product List</string>
    <string name="title_cadastro_produto">Add Product</string>
    <string name="title_editar_produto">Edit Product</string>
    <string name="title_dados_produto">Product Details</string>
    <string name="title_produto">Product</string>
    <string name="title_configuracoes">Settings</string>

    <!-- Messages -->
    <string name="erro_descricao">Enter the description</string>
    <string name="erro_quantidade">Enter the quantity</string>
    <string name="erro_valor">Enter the price</string>
    <string name="erro_status">Select the product status</string>
    <string name="dados_limpos">Fields cleared successfully!</string>
    <string name="produto_salvo">Product saved successfully!</string>
    <string name="produto_excluido">Product deleted successfully!</string>
    <string name="mensagem_produto_clicado">Product: %1$s\nPrice: $ %2$.2f</string>

    <!-- Buttons and Labels -->
    <string name="btn_adicionar">Add</string>
    <string name="btn_salvar">Save</string>
    <string name="btn_limpar">Clear</string>
    <string name="btn_sobre">About</string>
    <string name="menu_configuracoes">Settings</string>
    <string name="menu_editar">Edit</string>
    <string name="menu_excluir">Delete</string>

    <!-- Adapter Labels -->
    <string name="label_quantidade_adapter">Qty: %1$.2f %2$s</string>
    <string name="label_valor_adapter">$ %1$.2f</string>

    <!-- Settings -->
    <string name="label_modo_noturno">Night Mode</string>
    <string name="label_ordenacao">Sort by</string>
    <string name="ordem_descricao">Description</string>
    <string name="ordem_preco">Price</string>
    <string name="unidade_unidade">Unit</string>
    <string name="unidade_kg">Kilogram (Kg)</string>
    <string name="unidade_grama">Gram (g)</string>
    <string name="unidade_litro">Liter (L)</string>
    <string name="unidade_caixa">Box</string>
    <string name="aviso">Warning</string>
    <string name="ok">OK</string>
    <string name="confirmacao">"Confirmation "</string>
    <string name="sim">Yes</string>
    <string name="nao">No</string>
    <string name="deseja_apagar">Do you want do delete?\n\"%1$s\"</string>
    <string name="deseja_salvar">Do you want do save Configurations?</string>
    <string name="total_pedido">Sales Total: $ %.2f</string>

    <string name="total_pedido_inicial">Sales Total: $ 0,00</string>

    <!-- Pedido e ItensPedido -->
    <string name="title_pedido">Pedido</string>

    <string name="salvar_pedido">Save pedido</string>

    <string name="limpar_pedido">Clear pedido</string>

    <string name="deseja_limpar_pedido">Do you really want to clear all items from the order?</string>

    <string name="deseja_excluir_item_pedido">" Do you want to remove the item  &quot;%1$s&quot; from the order?"</string>
    <string name="item_pedido_excluido">" Item removed from the order."</string>

    <string name="quantidade_item_pedido">Quantity: %1$d</string>
    <string name="valor_unitario_item_pedido">Unitário: R$ %.2f</string>
    <string name="subtotal_item_pedido">Subtotal: R$ %.2f</string>

    <string name="pedido_vazio">No items have been added to the order.</string>
    <string name="pedido_salvo">Order save with success.</string>


</resources>